# MChessTS

./: .travis.yml  CMakeLists.txt  README.md
lib/: Bitboard.cpp  Bitboard.hpp  CMakeLists.txt  Clock.cpp  Clock.hpp  Move.cpp  Move.hpp  State.cpp  State.hpp
lib/eval/: Evaluator.cpp  Evaluator.hpp  PieceCountEvaluator.cpp  PieceCountEvaluator.hpp  PiecePositionEvaluator.cpp  PiecePositionEvaluator.hpp  Score.cpp  Score.hpp
lib/search/: AlphaBetaSearch.cpp  AlphaBetaSearch.hpp  Search.cpp  Search.hpp
lib/wrapper/: UCI.cpp  UCI.hpp
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  TestAlphaBetaSearch.cpp  TestBitboard.cpp  TestMove.cpp  TestPieceCountEvaluator.cpp  TestScore.cpp  TestState.cpp
